--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "dependencies":{
       "request":"latest",
-      "cheerio":"latest"
+      "cheerio":"latest",
+      "x-ray": "latest"
    },
   "devDependencies": {
     "browser-sync": "^2.7.7",
